- Updated to SQLite 3.3.17.
- Change exported file format to UTF8. (Thanks to Kiyu Horiuti).
- Added toolbar and moved buttons to toolbar. (Thanks to David Kocher for the prototyping).
- Added support for toggle status bar and moved progress indicator to toolbar.
- Add toolbar button to empty the trash.
- Added flagged article filter.

2.1.2.2110
----------
- Fixed bug: empty trash warning did not reappear after unhiding Vienna.
- Changed button tooltip to match behavior.
- New and nicer toolbar icons made by Davide Casali (Folletto).
- Fixed bug: move articles to Trash preference was counting back to beginning of day rather than by 24 hours.
- Fixed bug: change in JavaScript preference didn't take effect until relaunching.

2.1.1.2109
----------
- Added Danish localisation. (Thanks to David Munch).
- Added Czech localisation. (Thanks to Jakub Formanek).
- If folder manual sort order is corrupt, automatically reset.
- Fix date parsing for fractional seconds.
- The -profile switch is now propagated to a new instance of Vienna if Vienna is restarted.
- Added more built-in styles.
- Add Advanced preferences page and help file page to match.
- Fixed bug where folder passwords were not being properly saved and loaded.
- Save open tabs with unloaded URLs.
- Fix bug: when selecting articles list via right-click, menu items were disabled.
- When manually refreshing all subscriptions, reset the automatic refresh timer.
- Article title appears when article is dragged to iChat (and probably other to apps).
- If a feed item lacks a guid, identify the item by full title and link rather than by a hash.
- Added Applescript command: "mark all subscriptions read".
- Single-key shortcut 'n' for Next Unread command.
- Empty trash automatically on quitting. (Thanks to Hwang Hi.)
- Fix bug: subscriptions duplicated when exporting by AppleScript. (Thanks to Darren Kulp.)
- Support blogging with Pukka.
- Email page link from browser tab.